--- a/app/AdminModule/templates/Insurer/addDrug.latte
+++ b/app/AdminModule/templates/Insurer/addDrug.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  Pridanie likov poisťovni
+  Pridanie liekov poisťovni
 {/block}
 
 {block content}
