--- a/app/AdminModule/templates/Insurer/detail.latte
+++ b/app/AdminModule/templates/Insurer/detail.latte
@@ -34,7 +34,7 @@
 			</table>
 		</div>
 		<div class="col-10 offset-1 d-flex justify-content-end">
-			<a href="/admin/insurer/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Pridať liek</a>
+			<a href="/admin/insurer/{$id}/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Pridať liek</a>
 		</div>
 	{else}
 		<div class="row">
